--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "sqlalchemy>=2.0.38",
     "pgvector>=0.3.6",
     "psycopg2-binary>=2.9.10",
+    "pyexiftool>=0.5.6",
 ]
 
 [[tool.uv.index]]
